# bizav

./: .gitignore  README.md  info.yaml  pyproject.toml  requirements.lock.txt  requirements.txt  setup.py  study_counter.json
commands/: manual_init.sh
commands/project/: convert_curve_log  convert_hyper_opt_log  linux_install_mujoco  liquify  push_logs  push_logs_every_hour
documentation/: pfrl_documentation.md
examples/atari/: train_acer_ale.py
examples/gym/: train_dqn_gym.py
figures/: default.html
figures/logs/: comparisons1.cartpole.html  comparisons1.lunar_lander.html
hyp_opt/: LunarLander_async.json  Lunar_sync.json  Lunar_sync.out  charts.html  curve_converter.js  curve_plotter.py  halfcheetah_async.json  halfcheetah_sync_3.curves.json  halfcheetah_sync_3.json  halfcheetah_sync_3_phase2_attempt3.json  halfcheetah_sync_3_top_10.json  halfcheetah_sync__no_malicious_1.curves.json.charts.html  halfcheetah_sync__no_malicious_1.json  halfcheetah_sync__no_malicious_2.curves.json  halfcheetah_sync__no_malicious_2.curves.json.charts.html  halfcheetah_sync__no_malicious_2.json  optuna_converter.js
logs/: 2022-11-01.py  2022-11-01_cartpole_eval.py  2022-11-08_cheetah.log.py
logs/comparisons/: cartpole__atk=act__def=max.log.error  cartpole__atk=act__def=softmax.log.error  cartpole__atk=act__def=ucb.log.error  cartpole__atk=none__def=max.log.error  (+4 more)
main/: 0_comparison.py  0_hyp_tuning.py  0_main.py  2_a3c.py  _read_scores_legacy.py  config.py  create_comparison_plots.py  create_hyp_plots.py  create_plots.py  train_a3c.py  train_agent_async.py  utils.py
(+80 files in other folders)
