[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
pip = "20.1.1"
torch = "^1.12.1"
gym = "^0.26.2"
numpy = "^1.23.4"
filelock = "^3.8.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
