[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pip = "20.1.1"
torch = "^1.12.1"
gym = "0.22.0"
numpy = "^1.23.4"
filelock = "^3.8.0"
Pillow = "^9.2.0"
optuna = "^3.0.3"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
pygame = "2.1.0"
mujoco-py = "<2.2"
quik-config = "^1.6.0"
box2d-py = "2.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
